// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle />  Snapshots should match snapshot with checked prop 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: none;
}

.c3 {
  cursor: pointer;
  display: inline-block;
  height: 24px;
  padding-left: 40px;
}

.c3:before {
  background-color: #999999;
  border-radius: 16px;
  content: '';
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 42px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,-webkit-transform 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
}

.c3 .c4,
.c3 .c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  color: #999999;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  height: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  left: 2px;
  top: 2px;
  visibility: hidden;
  width: 20px;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c3 .c4 {
  visibility: visible;
}

.c1 {
  cursor: pointer;
  height: 24px;
  left: 0;
  opacity: 0;
  position: absolute;
  pointer-events: initial;
  width: 100%;
}

.c1:focus + .c2:before {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
}

.c1:hover + .c2:before {
  background-color: #424242;
}

.c1:checked + .c2 .c4 {
  visibility: hidden;
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

.c1:checked + .c2 .c5 {
  visibility: visible;
}

.c1:checked + .c2:before {
  background-color: #1250C4;
}

.c1:checked:hover + .c2:before {
  background-color: #002F7B;
}

.c1:checked + .c2 .c5 {
  background-color: #E5EDFC;
  color: #1250C4;
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

<div
  className="c0"
>
  <input
    checked={true}
    className="c1"
    role="switch"
    type="checkbox"
  />
  <div
    className="c2 c3"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c4 "
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 "
      style={
        Object {
          "color": "",
        }
      }
    >
      check
    </span>
  </div>
</div>
`;

exports[`<Toggle />  Snapshots should match snapshot without props 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: none;
}

.c3 {
  cursor: pointer;
  display: inline-block;
  height: 24px;
  padding-left: 40px;
}

.c3:before {
  background-color: #999999;
  border-radius: 16px;
  content: '';
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 42px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,-webkit-transform 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,transform 0.2s ease-in-out;
}

.c3 .c4,
.c3 .c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  color: #999999;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  height: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  left: 2px;
  top: 2px;
  visibility: hidden;
  width: 20px;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c3 .c4 {
  visibility: visible;
}

.c1 {
  cursor: pointer;
  height: 24px;
  left: 0;
  opacity: 0;
  position: absolute;
  pointer-events: initial;
  width: 100%;
}

.c1:focus + .c2:before {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
}

.c1:hover + .c2:before {
  background-color: #424242;
}

.c1:checked + .c2 .c4 {
  visibility: hidden;
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

.c1:checked + .c2 .c5 {
  visibility: visible;
}

.c1:checked + .c2:before {
  background-color: #1250C4;
}

.c1:checked:hover + .c2:before {
  background-color: #002F7B;
}

.c1:checked + .c2 .c5 {
  background-color: #E5EDFC;
  color: #1250C4;
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

<div
  className="c0"
>
  <input
    checked={null}
    className="c1"
    role="switch"
    type="checkbox"
  />
  <div
    className="c2 c3"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c4 "
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 "
      style={
        Object {
          "color": "",
        }
      }
    >
      check
    </span>
  </div>
</div>
`;
